--- a/configs/path.conf
+++ b/configs/path.conf
@@ -1,5 +1,5 @@
 project = "./"
-skynet_framework = "./skynet_framework/"
+skynet_framework = "./framework/"
 luaservice = skynet_framework.."service/?.lua;"..project.."service/?.lua"
 lualoader = skynet_framework .. "lualib/loader.lua"
 lua_path = skynet_framework.."lualib/?.lua;"..skynet_framework.."lualib/?/init.lua"
