--- a/configs/node1.conf
+++ b/configs/node1.conf
@@ -7,3 +7,5 @@ harbor = 0
 start = "main"	-- main script
 bootstrap = "snlua bootstrap"	-- The service for bootstrap
 cpath = skynet_framework.."cservice/?.so"
+-- daemon = "./runtime/skynet.pid"
+node = "node1"
