--- a/configs/path.conf
+++ b/configs/path.conf
@@ -2,7 +2,6 @@ project = "./"
 skynet_framework = "./skynet/"
 luaservice = skynet_framework.."service/?.lua;"..project.."service/?.lua"
 lualoader = skynet_framework .. "lualib/loader.lua"
-lua_path = skynet_framework.."lualib/?.lua;"..skynet_framework.."lualib/?/init.lua"
+lua_path = "configs/?.lua;"..skynet_framework.."lualib/?.lua;"..skynet_framework.."lualib/?/init.lua"
 lua_cpath = skynet_framework .. "luaclib/?.so"
 snax = skynet_framework.."service/?.lua"
-
