--- a/configs/node2.conf
+++ b/configs/node2.conf
@@ -6,6 +6,6 @@ logpath = "../logs/"
 harbor = 0
 start = "main"	-- main script
 bootstrap = "snlua bootstrap"	-- The service for bootstrap
-cpath = skynet_framework.."cservice/?.so"
+cpath = "./skynet/cservice/?.so"
 -- daemon = "./runtime/skynet.pid"
 node = "node1"
