--- a/configs/path.conf
+++ b/configs/path.conf
@@ -1,7 +1,5 @@
-project = "./"
-skynet_framework = "./skynet/"
-luaservice = skynet_framework.."service/?.lua;"..project.."service/?.lua"
-lualoader = skynet_framework .. "lualib/loader.lua"
-lua_path = "configs/?.lua;"..skynet_framework.."lualib/?.lua;"..skynet_framework.."lualib/?/init.lua"
-lua_cpath = skynet_framework .. "luaclib/?.so"
-snax = skynet_framework.."service/?.lua"
+luaservice = "./service/?.lua;./service/?/init.lua;./skynet/service/?.lua;"
+lualoader = "./skynet/lualib/loader.lua"
+lua_path = "./configs/?.lua;./lualib/?.lua;./skynet/lualib/?.lua;./skynet/lualib/?/init.lua"
+lua_cpath = "./lualib/?.so;./skynet/luaclib/?.so"
+snax = "./skynet/service/?.lua"
